--- a/index.html
+++ b/index.html
@@ -3,36 +3,89 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>My Telegram Web App</title>
+    <title>EarnMatrix Web App - Signup</title>
     <style>
         body {
             font-family: Arial, sans-serif;
             text-align: center;
             padding: 50px;
-            background-color: #f7f7f7;
+            background-color: #FF0000; /* Red background */
+            color: white;
         }
         h1 {
-            color: #333;
+            color: white;
         }
         p {
-            color: #555;
+            color: white;
         }
-        .btn {
+        .form-container {
+            display: inline-block;
+            background-color: #fff;
+            padding: 20px;
+            border-radius: 8px;
+            color: black;
+            width: 300px;
+        }
+        input {
+            width: 100%;
+            padding: 10px;
+            margin: 10px 0;
+            border: 1px solid #ccc;
+            border-radius: 5px;
+        }
+        button {
+            width: 100%;
+            padding: 10px;
             background-color: #4CAF50;
             color: white;
-            padding: 10px 20px;
-            text-decoration: none;
+            border: none;
             border-radius: 5px;
             font-size: 16px;
+            cursor: pointer;
         }
-        .btn:hover {
+        button:hover {
             background-color: #45a049;
         }
     </style>
 </head>
 <body>
-    <h1>Welcome to My Telegram Web App</h1>
-    <p>This is a sample web app integrated with Telegram.</p>
-    <a href="https://t.me/EarnMatrix_bot" class="btn">Go to My Telegram Bot</a>
+    <h1>Sign Up for EarnMatrix</h1>
+    <p>Fill in the details to register</p>
+    
+    <div class="form-container">
+        <form id="signupForm">
+            <input type="text" id="username" placeholder="Username" required>
+            <input type="email" id="email" placeholder="Email" required>
+            <input type="tel" id="phone" placeholder="Phone Number" required>
+            <input type="password" id="password" placeholder="Password" required>
+            <button type="button" onclick="saveData()">Register</button>
+        </form>
+    </div>
+
+    <script>
+        function saveData() {
+            // Get form values
+            const username = document.getElementById('username').value;
+            const email = document.getElementById('email').value;
+            const phone = document.getElementById('phone').value;
+            const password = document.getElementById('password').value;
+
+            // Check if all fields are filled
+            if (username && email && phone && password) {
+                // Save data in localStorage
+                localStorage.setItem('username', username);
+                localStorage.setItem('email', email);
+                localStorage.setItem('phone', phone);
+                localStorage.setItem('password', password);
+
+                // Show a success message
+                alert("Registration successful! Data saved in local storage.");
+                // Optionally, clear the form
+                document.getElementById('signupForm').reset();
+            } else {
+                alert("Please fill in all fields.");
+            }
+        }
+    </script>
 </body>
 </html>
