--- a/index.html
+++ b/index.html
@@ -3,7 +3,7 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>EarnMatrix Web App - Signup</title>
+    <title>Revix-Technology Web App - Signup</title>
     <style>
         body {
             font-family: Arial, sans-serif;
@@ -49,7 +49,7 @@
     </style>
 </head>
 <body>
-    <h1>Sign Up for EarnMatrix</h1>
+    <h1>Sign Up for Revix-Technology</h1>
     <p>Fill in the details to register</p>
     
     <div class="form-container">
