--- a/index.html
+++ b/index.html
@@ -1,14 +1,15 @@
 <!DOCTYPE html>
 <html lang="en">
+
 <head>
-    <meta charset="UTF-8">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Revix Technology - Signup</title>
+    <meta charset="utf-8">
+    <meta name="viewport" content="width=device-width, initial-scale=1, shrink-to-fit=no">
+    <meta name="description" content="Revix Technology - Sign up">
+    <title>Sign Up - Revix Technology</title>
+    <link rel="shortcut icon" href="favicon.png">
     <style>
         body {
             font-family: Arial, sans-serif;
-            text-align: center;
-            padding: 50px;
             background-color: #FF0000; /* Red background */
             color: white;
             height: 100vh;
@@ -17,30 +18,40 @@
             justify-content: center;
             align-items: center;
         }
-        h1 {
-            color: white;
-        }
-        p {
-            color: white;
-        }
-        .form-container {
+        .card {
             background-color: #fff;
-            padding: 30px;
             border-radius: 10px;
-            color: black;
-            width: 350px;
-            box-shadow: 0 4px 10px rgba(0, 0, 0, 0.1);
+            width: 100%;
+            max-width: 400px;
+            box-shadow: 0 10px 20px rgba(0, 0, 0, 0.1);
+            padding: 20px;
+            color: #333;
+        }
+        .card h3 {
+            margin-bottom: 20px;
+            font-size: 24px;
             text-align: center;
         }
-        input {
+        .card p {
+            text-align: center;
+            font-size: 14px;
+        }
+        .form-group {
+            margin-bottom: 20px;
+        }
+        .form-group input {
             width: 100%;
             padding: 12px;
-            margin: 15px 0;
-            border: 1px solid #ccc;
             border-radius: 8px;
+            border: 1px solid #ccc;
             font-size: 16px;
         }
-        button {
+        .form-group label {
+            display: block;
+            margin-bottom: 5px;
+            font-size: 16px;
+        }
+        .btn-primary {
             width: 100%;
             padding: 12px;
             background-color: #4CAF50;
@@ -50,64 +61,77 @@
             font-size: 16px;
             cursor: pointer;
         }
-        button:hover {
+        .btn-primary:hover {
             background-color: #45a049;
+        }
+        .footer {
+            text-align: center;
+            margin-top: 20px;
         }
         .success-message {
             display: none;
-            background-color: #4CAF50; /* Green background for success */
+            background-color: #4CAF50; /* Green */
             color: white;
             padding: 15px;
-            border-radius: 8px;
             margin-top: 20px;
-            width: 100%;
-            font-size: 16px;
+            border-radius: 8px;
             text-align: center;
-            box-sizing: border-box;
         }
     </style>
 </head>
+
 <body>
-    <div class="form-container">
-        <h1>Revix Technology - Sign Up</h1>
-        <p>Fill in the details to register</p>
-        
+    <div class="card">
+        <h3>Sign Up to Revix Technology</h3>
+        <p>Please fill in the details below to create an account.</p>
         <form id="signupForm">
-            <input type="text" id="username" placeholder="Username" required>
-            <input type="email" id="email" placeholder="Email" required>
-            <input type="tel" id="phone" placeholder="Phone Number" required>
-            <input type="password" id="password" placeholder="Password" required>
-            <button type="button" onclick="saveData()">Register</button>
+            <div class="form-group">
+                <label for="username">Username</label>
+                <input type="text" id="username" name="username" placeholder="Enter Username" required>
+            </div>
+            <div class="form-group">
+                <label for="email">Email</label>
+                <input type="email" id="email" name="email" placeholder="Enter Email" required>
+            </div>
+            <div class="form-group">
+                <label for="phone">Phone Number</label>
+                <input type="tel" id="phone" name="phone" placeholder="Enter Phone Number" required>
+            </div>
+            <div class="form-group">
+                <label for="password">Password</label>
+                <input type="password" id="password" name="password" placeholder="Enter Password" required>
+            </div>
+            <button type="button" class="btn-primary" onclick="saveData()">Register</button>
         </form>
-        
         <div id="successMessage" class="success-message">
             Registration Successful. <br> Proceed to login....
+        </div>
+        <div class="footer">
+            <p class="small">Already have an account? <a href="login.html">Login</a></p>
         </div>
     </div>
 
     <script>
         function saveData() {
-            // Get form values
             const username = document.getElementById('username').value;
             const email = document.getElementById('email').value;
             const phone = document.getElementById('phone').value;
             const password = document.getElementById('password').value;
 
-            // Check if all fields are filled
             if (username && email && phone && password) {
-                // Save data in localStorage
+                // Save data to localStorage
                 localStorage.setItem('username', username);
                 localStorage.setItem('email', email);
                 localStorage.setItem('phone', phone);
                 localStorage.setItem('password', password);
 
-                // Show the success message
+                // Show success message
                 document.getElementById('successMessage').style.display = 'block';
 
-                // Optionally, clear the form after success
+                // Clear the form
                 document.getElementById('signupForm').reset();
 
-                // Hide success message after 3 seconds (optional)
+                // Hide success message after 3 seconds
                 setTimeout(function() {
                     document.getElementById('successMessage').style.display = 'none';
                 }, 3000);
@@ -117,4 +141,5 @@
         }
     </script>
 </body>
+
 </html>
