--- a/index.html
+++ b/index.html
@@ -32,6 +32,12 @@
             font-size: 24px;
             text-align: center;
         }
+        .card h3 span.red {
+            color: #FF0000; /* Red color for Revix */
+        }
+        .card h3 span.blue {
+            color: #0000FF; /* Blue color for Technology */
+        }
         .card p {
             text-align: center;
             font-size: 14px;
@@ -82,7 +88,7 @@
 
 <body>
     <div class="card">
-        <h3>Sign Up to Revix Technology</h3>
+        <h3><span class="red">Revix</span><span class="blue"> Technology</span></h3>
         <p>Please fill in the details below to create an account.</p>
         <form id="signupForm">
             <div class="form-group">
