--- a/index.html
+++ b/index.html
@@ -29,7 +29,7 @@
             color: #333;
             display: flex;
             flex-direction: column;
-            justify-content: space-between;
+            justify-content: flex-start;
             height: auto;
         }
 
@@ -93,12 +93,13 @@
 
         .success-message {
             display: none;
-            background-color: #4CAF50; /* Green */
+            background-color: #FF0000; /* Red Background */
             color: white;
             padding: 15px;
             margin-top: 20px;
             border-radius: 8px;
             text-align: center;
+            font-size: 16px;
         }
     </style>
 </head>
