--- a/index.html
+++ b/index.html
@@ -100,6 +100,7 @@
             border-radius: 8px;
             text-align: center;
             font-size: 16px;
+            margin-bottom: 20px; /* Added space below success message */
         }
     </style>
 </head>
@@ -108,6 +109,12 @@
     <div class="card">
         <h3><span class="red">Revix</span><span class="blue"> Technology</span></h3>
         <p>Please fill in the details below to create an account.</p>
+        
+        <!-- Success Message -->
+        <div id="successMessage" class="success-message">
+            Registration Successful. <br> Proceed to login....
+        </div>
+
         <form id="signupForm">
             <div class="form-group">
                 <label for="username">Username</label>
@@ -135,10 +142,8 @@
                 </select>
             </div>
             <button type="button" class="btn-primary" onclick="saveData()">Register</button>
-            <div id="successMessage" class="success-message">
-                Registration Successful. <br> Proceed to login....
-            </div>
         </form>
+
         <div class="footer">
             <p class="small">Already have an account? <a href="login.html">Login</a></p>
         </div>
