--- a/dashboard.html
+++ b/dashboard.html
@@ -1,4 +1,5 @@
-<!DOCTYPE html><html lang="en"><head>
+<!DOCTYPE html><html lang="en">
+<head>
     <meta charset="utf-8">
     <meta name="viewport" content="width=device-width, initial-scale=1, shrink-to-fit=no">
     <meta name="description" content="User Dashboard">
@@ -6,44 +7,78 @@
     <style>
         body {
             font-family: Arial, sans-serif;
-            background-color: #ffffff;
+            background-color: white;
             margin: 0;
-            padding: 20px;
+            padding: 0;
             text-align: center;
         }
-        .balance-box {
+        .header {
+            display: flex;
+            justify-content: space-between;
+            align-items: center;
+            padding: 20px;
+            background: white;
+            border-bottom: 1px solid #ddd;
+        }
+        .menu-button {
+            font-size: 24px;
+            cursor: pointer;
+            background: none;
+            border: none;
+        }
+        .menu {
+            display: none;
+            position: absolute;
+            top: 60px;
+            left: 10px;
+            background: white;
+            box-shadow: 0px 5px 10px rgba(0, 0, 0, 0.1);
+            border-radius: 10px;
+            padding: 10px;
+        }
+        .menu a {
+            display: block;
+            padding: 10px;
+            text-decoration: none;
+            color: black;
+            border-bottom: 1px solid #ddd;
+        }
+        .menu a:last-child {
+            border-bottom: none;
+        }
+        .balance-container {
+            margin-top: 40px;
             background-color: #FF0000;
             color: white;
-            padding: 15px;
-            border-radius: 15px;
-            width: 200px;
-            margin: 20px auto;
-            font-size: 18px;
-            font-weight: bold;
-        }
-        .container {
-            max-width: 600px;
-            margin: 50px auto;
             padding: 20px;
-            box-shadow: 0px 4px 10px rgba(0, 0, 0, 0.1);
-            border-radius: 10px;
-            background: #fff;
-        }
-        h2 {
-            color: #333;
+            border-radius: 15px;
+            display: inline-block;
         }
     </style>
-    <script>
-        document.addEventListener("DOMContentLoaded", function() {
-            let username = localStorage.getItem("username") || "User";
-            let balance = localStorage.getItem("balance") || "0";
-            document.getElementById("username").innerText = username;
-            document.getElementById("balance").innerText = "₦" + balance;
-        });
-    </script>
-</head><body>
-    <div class="container">
-        <h2>Welcome, <span id="username"></span></h2>
-        <div class="balance-box">Total Balance<br><span id="balance"></span></div>
+</head>
+<body>
+    <div class="header">
+        <button class="menu-button" onclick="toggleMenu()">☰</button>
+        <h2>Welcome <span id="username"></span></h2>
     </div>
-</body></html>
+    <div class="menu" id="menu">
+        <a href="dailyPay.html">Daily Pay</a>
+        <a href="downlines.html">My Downlines</a>
+        <a href="withdraw.html">Withdraw</a>
+        <a href="profile.html">Profile</a>
+        <a href="upgradeAccount.html">Upgrade Account</a>
+    </div>
+    <div class="balance-container">
+        <h3>Total Balance</h3>
+        <h2>N<span id="balance"></span></h2>
+    </div>
+    <script>
+        function toggleMenu() {
+            var menu = document.getElementById('menu');
+            menu.style.display = menu.style.display === 'block' ? 'none' : 'block';
+        }
+        document.getElementById('username').innerText = localStorage.getItem('username') || 'User';
+        document.getElementById('balance').innerText = localStorage.getItem('balance') || '0';
+    </script>
+</body>
+</html>
